custom-k8s-manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/instance: my-otel-demo
    app.kubernetes.io/name: my-otel-demo-grafana
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/version: 1.7.0
    helm.sh/chart: opentelemetry-demo-0.27.0
    opentelemetry.io/name: my-otel-demo-grafana
  name: my-otel-demo-grafana
  namespace: otel-demo
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-oteldemo.example.com
    http:
      paths:
      - backend:
          service:
            name: my-otel-demo-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
