custom-k8s-manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: my-otel-demo
    app.kubernetes.io/name: my-otel-demo-prometheus
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/version: 1.7.0
    helm.sh/chart: opentelemetry-demo-0.27.0
    opentelemetry.io/name: my-otel-demo-prometheus
  name: my-otel-demo-prometheus
  namespace: otel-demo
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus-oteldemo.example.com
    http:
      paths:
      - backend:
          service:
            name: my-otel-demo-prometheus-server
            port:
              number: 9090
        path: /
        pathType: Prefix
